--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Taller de Piano",
-  "short_name": "Taller de Piano",
+  "name": "Mozart Appcademy",
+  "short_name": "Mozart Appcademy",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
